--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,15 @@
+aniso8601==9.0.1
 blinker==1.6.2
 click==8.1.7
+flake8==6.1.0
 Flask==2.3.2
+Flask-RESTful==0.3.10
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+mccabe==0.7.0
+pycodestyle==2.11.0
+pyflakes==3.1.0
+pytz==2023.3
+six==1.16.0
 Werkzeug==2.3.7
