--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,23 @@
 aniso8601==9.0.1
 blinker==1.6.2
 click==8.1.7
+dnspython==2.4.2
+email-validator==2.0.0.post2
 flake8==6.1.0
-Flask==2.3.2
+Flask==2.2.5
+flask-mongoengine==1.0.0
 Flask-RESTful==0.3.10
+Flask-WTF==1.1.1
+idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 mccabe==0.7.0
+mongoengine==0.27.0
 pycodestyle==2.11.0
 pyflakes==3.1.0
+pymongo==4.4.1
 pytz==2023.3
 six==1.16.0
 Werkzeug==2.3.7
+WTForms==3.0.1
