--- a/requirements.txt
+++ b/requirements.txt
@@ -3,21 +3,29 @@ blinker==1.6.2
 click==8.1.7
 dnspython==2.4.2
 email-validator==2.0.0.post2
+exceptiongroup==1.1.3
 flake8==6.1.0
 Flask==2.2.5
 flask-mongoengine==1.0.0
 Flask-RESTful==0.3.10
 Flask-WTF==1.1.1
 idna==3.4
+iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 mccabe==0.7.0
 mongoengine==0.27.0
+mongomock==4.1.2
+packaging==23.1
+pluggy==1.2.0
 pycodestyle==2.11.0
 pyflakes==3.1.0
 pymongo==4.4.1
+pytest==7.4.0
 pytz==2023.3
+sentinels==1.0.0
 six==1.16.0
+tomli==2.0.1
 Werkzeug==2.3.7
 WTForms==3.0.1
