--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,11 +13,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-python@v3
+        with:
+          python-version: '3.10'
 
       - name: Install dependences
         run: |
           pip install -r requirements.txt
-          pip install flake8 pytest
+          pip install flake8 pytest mongomock
 
       - name: Run tests
         run: make test 
