--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,3 +24,15 @@ jobs:
 
       - name: Run tests
         run: make test 
+
+  deploy: 
+    needs: test
+    runs-on: ubuntu-latest
+    
+    steps:
+      - uses: actions/checkout@v3
+      - name: Deploy to heroku 
+        run: make heroku
+        env:
+          HEROKU_API_KEY: ${{ secret.HEROKU_API_KEY }}
+
