--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,5 +34,5 @@ jobs:
       - name: Deploy to heroku 
         run: make heroku
         env:
-          HEROKU_API_KEY: ${{ secret.HEROKU_API_KEY }}
+          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
 
