--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 aniso8601==9.0.1
+black==23.7.0
 blinker==1.6.2
 click==8.1.7
 dnspython==2.4.2
@@ -17,7 +18,10 @@ MarkupSafe==2.1.3
 mccabe==0.7.0
 mongoengine==0.27.0
 mongomock==4.1.2
+mypy-extensions==1.0.0
 packaging==23.1
+pathspec==0.11.2
+platformdirs==3.10.0
 pluggy==1.2.0
 pycodestyle==2.11.0
 pyflakes==3.1.0
