--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 aniso8601==9.0.1
+bandit==1.7.5
 black==23.7.0
 blinker==1.6.2
 click==8.1.7
@@ -10,26 +11,36 @@ Flask==2.2.5
 flask-mongoengine==1.0.0
 Flask-RESTful==0.3.10
 Flask-WTF==1.1.1
+gitdb==4.0.10
+GitPython==3.1.32
 idna==3.4
 iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 mccabe==0.7.0
+mdurl==0.1.2
 mongoengine==0.27.0
 mongomock==4.1.2
 mypy-extensions==1.0.0
 packaging==23.1
 pathspec==0.11.2
+pbr==5.11.1
 platformdirs==3.10.0
 pluggy==1.2.0
 pycodestyle==2.11.0
 pyflakes==3.1.0
+Pygments==2.16.1
 pymongo==4.4.1
 pytest==7.4.0
 pytz==2023.3
+PyYAML==6.0.1
+rich==13.5.2
 sentinels==1.0.0
 six==1.16.0
+smmap==5.0.0
+stevedore==5.1.0
 tomli==2.0.1
 Werkzeug==2.3.7
 WTForms==3.0.1
