feat: kubernetes deployment

--- a/kubernetes/manifests/10-secret.yaml
+++ b/kubernetes/manifests/10-secret.yaml
@@ -1,10 +1,9 @@
 apiVersion: v1
 data:
-  MONGODB_DB: dXNlcnM=
-  MONGODB_HOST: bW9uZ29kYg==
+  MONGODB_USER: cm9vdA==
   MONGODB_PASSWORD: cm9vdA==
-  MONGODB_USERNAME: cm9vdA==
+  MONGODB_HOST: bW9uZ29kYg==
+  MONGODB_DB: dXNlcnM=
 kind: Secret
 metadata:
-  creationTimestamp: null
   name: mongodb-credentials
